some progress on problem1

--- a/problem1.ipynb
+++ b/problem1.ipynb
@@ -7,11 +7,137 @@
     "# Problem 1 \n",
     "Estimate and compare the confidence intervals or error bars obtained for each distribution using Hoeffding's inequality and the Chebyshev inequality (for the latter one, you need to analyze or empirically  estimate the variance)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.stats import norm\n",
+    "import time\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Load data generated in data_generation.ipynb\n",
+    "\n",
+    "input_file_path = \"data_100000_100013059.csv\"\n",
+    "df = pd.read_csv(input_file_path)\n",
+    "N = len(df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hoeffding inequality\n",
+    "\n",
+    "Let $X_1, ..., X_n$ be i.i.d. random variables, bounded by the intervals $a_i \\leq X_i \\leq b_i$. Let the empirical mean be defined according to $\\overline{X} = \\frac{1}{n} \\sum_{i=1}^n X_i$. It holds that: $$ P(|\\overline{X} - \\mathbb{E}[\\overline{X}]| \\geq \\epsilon) \\leq 2e^{-\\frac{2n\\epsilon^2}{\\sum_{i=1}^n(a_i - b_i)^2}} $$\n",
+    "\n",
+    "To find the Confidence Interval (CI) with confidence level $1 - \\alpha$ (e.g., 0.95 for 95%), we set the right side equal to $\\alpha$ and solve for the margin of error $\\epsilon$:\n",
+    "\n",
+    "$$ \\epsilon = (b-a)\\sqrt(\\frac{\\ln{2/\\alpha}}{2N})$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gaussian distribution\n",
+    "\n",
+    "Gaussian distribution is unbounded, so for illustrating the confidence interval using Hoeffding inequality we can choose to truncate to a certain range like $3\\sigma$, $5\\sigma$, etc. or alternatively to the actual minimum and maximum values of the sample."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample Mean: 0.00035\n",
+      "Data Range [a, b]: [-2.198, 2.055] (Width: 4.252)\n",
+      "------------------------------\n",
+      "Hoeffding Margin of Error: 0.01826\n",
+      "Hoeffding 95% CI: [-0.01792, 0.01861]\n",
+      "------------------------------\n",
+      "Standard (CLT) Margin: 0.00310\n",
+      "Note: Hoeffding is usually wider (more conservative) than CLT.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Hoeffding inequality of Gaussian distribution\n",
+    "\n",
+    "# Gaussian with mu=0 and sigma=0.5\n",
+    "\n",
+    "dfg_m0_s0_5 = df[\"normal mu=0 sigma=0.5\"]\n",
+    "mu = 0\n",
+    "sigma = 0.5\n",
+    "sample_mean = dfg_m0_s0_5.mean()\n",
+    "sample_std = dfg_m0_s0_5.std()\n",
+    "sample_min = dfg_m0_s0_5.min()\n",
+    "sample_max = dfg_m0_s0_5.max()\n",
+    "a, b = sample_min, sample_max\n",
+    "alpha = 0.05  # 95% confidence\n",
+    "range_width = b - a\n",
+    "epsilon = range_width * np.sqrt(np.log(2 / alpha) / (2 * N))\n",
+    "lower_bound = sample_mean - epsilon\n",
+    "upper_bound = sample_mean + epsilon\n",
+    "\n",
+    "# Standard Error = sigma / sqrt(N) (Using sample std dev here)\n",
+    "z_score = 1.96 # For 95% CI\n",
+    "clt_margin = z_score * (sample_std / np.sqrt(N))\n",
+    "\n",
+    "# --- Output ---\n",
+    "print(f\"Sample Mean: {sample_mean:.5f}\")\n",
+    "print(f\"Data Range [a, b]: [{a:.3f}, {b:.3f}] (Width: {range_width:.3f})\")\n",
+    "print(\"-\" * 30)\n",
+    "print(f\"Hoeffding Margin of Error: {epsilon:.5f}\")\n",
+    "print(f\"Hoeffding 95% CI: [{lower_bound:.5f}, {upper_bound:.5f}]\")\n",
+    "print(\"-\" * 30)\n",
+    "print(f\"Standard (CLT) Margin: {clt_margin:.5f}\")\n",
+    "print(f\"Hoeffding is wider (more conservative) than CLT.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chebishev inequality\n",
+    "\n",
+    "For any R.V (Random Variable)  $X$ and for *any*  positive number $\\lambda > 0$: $$ Pr(|X-\\mathbb{E}[X]| \\geq \\lambda) \\leq \\frac{Var(X)}{\\lambda^2} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
